[metadata]
name = jvmcoredump-gczuczy
version = 0.1
author = Gergely Czuczy
author_email = gergely.czuczy@harmless.hu
description = Provides valid coredumps for JVMs stuck in GC loops
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gczuczy/jvmcoredump
project_urls =
  Bug Tracker = https://github.com/gczuczy/jvmcoredump/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Intended Audience :: Developers
  Topic :: Software Development :: Debuggers

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  python-gdb-ctrl
  pexpect

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  jvmcoredump = jvmcoredump.cli:main
